--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Web site created using create-react-app" />
     <meta http-equiv="Content-Security-Policy" content="script-src 'self';" />
-    <title>Vraputic Desktop App</title>
+    <title>Yubreevi-Powered by VRapeutic</title>
 </head>
 
 <body>
